[package]
name = "diskcache"
version = "0.2.0"
edition = "2024"
description = "Rust disk-backed cache."
license = "MIT"
repository = "https://github.com/miaobuao/diskcache-rs"
homepage = "https://github.com/miaobuao/diskcache-rs"
documentation = "https://docs.rs/diskcache"

[dependencies]
blake3 = "1.8.2"
crc32fast = "1.5.0"
fjall = "3.1.4"
rkyv = { version = "0.8.16", features = ["alloc", "bytecheck", "std"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rayon = "1.11.0"
tempfile = "3.23.0"

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "fjall_raw_bench"
harness = false
